# pi_ir_hager_2025

./: .gitignore  README.md  c_writer.py  model.onnx.data  requirements.txt
0_Documentation/: code_format.md  commit_format.md  planification_du_travail.md
1_Conversion_Intermediate_Language_Model_Architecture/: ast_output.json  extract_model_architecture.py  extract_model_architecture_10.py  extract_model_architecture_11.py  extract_model_architecture_12.py  extract_model_architecture_13.py  extract_model_architecture_14.py  extract_model_architecture_15.py  extract_model_architecture_16.py  extract_model_architecture_17.py  extract_model_architecture_18.py  extract_model_architecture_19.py  extract_model_architecture_2.py  extract_model_architecture_3.py  extract_model_architecture_4.py  extract_model_architecture_5.py  extract_model_architecture_6.py  extract_model_architecture_7.py  extract_model_architecture_8.py  extract_model_architecture_9.py  layers.json  layers.py  lib_classes.py  lib_classes_2.py  lib_classes_3.py  lib_classes_4.py  lib_classes_5.py  lib_classes_6.py  lib_layers.py  test_extract_all_json.py  test_extraction.py  test_extraction_20.py  test_link_weights_to_architecture.py  test_model_architecture_1.py  test_model_architecture_2.py
1_Extraction/: extract_model_architecture.py  layers.json  lib_classes.py  lib_layers.py  test.sh  test_link_weights_to_architecture.py
1_Extraction/tests/: test_model_architecture_1.py  (+6 more)
1_ModelBlocks_Implementation/: lib_extract_model_architecture.py  lib_test.py  lib_test_link_weights_to_architecture.py  lib_test_load_link_and_interprete.py  lib_test_load_link_and_interprete_debug.py  lib_weights_link.py  script_test.py  script_test_link_weights_to_architecture.py  script_test_load_link_and_interprete.py  script_test_load_link_and_interprete_debug.py  test.sh  test_simple.py
2_Pytorch_Base_Functions_Implementation/: pytorch_to_convert.md
3_Conversion_Intermediate_Language_C_Assembly/: example_linear_with_conditions.cpp  linear_implementation_example.py  pytorch_to_convert.md
4_CPP_Writer/: TODO.md  c_writer.py
debug/: lib_debug.py
doc/: R1_Projet_Ingenieur.md  R2_Projet_Ingenieur.md  R3_Projet_Ingenieur.md  R4_Projet_Ingenieur.md  R5_Projet_Ingenieur.md  code_format.md  procedure.txt
export_and_quantize/: afdd_gen3_sdia.py  afdd_model_eval_sdia.py  export_model_to_tflite.py  export_quantize_to_tflite.py  quantize.py
export_model_on_stm32_with_gcc/: Makefile  README.md  build.sh  debug_log.c  debug_log.h  device_config.h  erase.sh  flash.sh  init_config.c  init_config.h  log_tree.txt  main.c  manage_models.py  network.c  network.h  network_c_info.json  network_config.h  network_data.c  network_data.h  network_data_params.c  network_data_params.h  run.sh  stm32h723xg.ld  stm32u545re.ld  stop.sh  utils.c  utils.h
export_model_on_stm32_with_hal_gcc/: CMakeLists.txt  Makefile  STM32_U545_PIN_DOC.md  cmake_install.cmake  compile_commands.json  flash.sh  manage_models.py  project_config.yaml  test.bat  test.ioc
export_model_on_stm32_with_hal_gcc/AI/: network.c  network.h  network_data.c  network_data.h  network_details.h
export_model_on_stm32_with_hal_gcc/Core/Inc/: ai_led.h  ai_network.h  ai_signal.h  stm32u5xx_hal_conf.h  stm32u5xx_nucleo_conf.h  system_init.h
export_model_on_stm32_with_hal_gcc/Core/Src/: ai_led.c  ai_network.c  ai_signal.c  main_ai.c  main_demo.c  stm32u5xx_hal_msp.c  system_init.c
export_model_on_stm32_with_hal_gcc/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
export_model_on_stm32_with_hal_gcc/cmake/stm32cubemx/: CMakeLists.txt  Makefile  cmake_install.cmake
export_model_to_onnx/: export_model_to_keras.py  export_model_to_keras2.py  export_model_to_onnx.py  export_model_to_onnx_2.py  export_model_to_onnx_3.py  export_model_to_onnx_4.py  export_model_to_onnx_5.py  export_model_to_onnx_6.py  export_model_to_tflite.py  export_to_tflite_float16.py  exported_model.onnx  exported_model.tflite  exported_model_float16.tflite  model_to_export.py  model_to_export_custom_layer_norm.py  model_to_export_custom_layer_norm_no_if.py  model_to_export_custom_layer_norm_simpl.py  model_to_export_custom_layer_norm_simpl_no_float.py  model_to_export_example_data.pkl  model_to_export_weights.pth  onnx_quantize.py  quantize_tflite_float16.py
onnx_models_conversion_and_benchmark/: lib_count_layers.py  lib_import_pt_models.py  lib_onnx_convert.py  lib_test.py  main_convert_to_onnx_and_measures.py  saved_models_measurements.json  saved_models_measures_b.json  script_test_and_measures.py
other_solutions/: justification.md  windows_stedgeai_procedure.md
sdia2025/: afdd_gen3_sdia.py  afdd_model_eval_sdia.py  test1.py
stm32_ai_models/: current_device.txt  current_loaded_model.txt
stm32_example_export_opensource/: Makefile  blink.c  build.sh  flash.sh  stm32h723xg.ld
test_models/: _saved_models_measurements.json  data_table.csv  lib_onnx_convert.py  lib_test.py  plot_data.py  saved_models_measurements.json  saved_models_measurements_.json  saved_models_measures.json  saved_models_measures_a.json  script_test_and_measures.py
(+531 files in other folders)
